Fixing dark mode issues

--- a/wakeride-style.css
+++ b/wakeride-style.css
@@ -446,6 +446,8 @@ p, ul, li {
     align-items: center;
     height: auto;
     margin-top: 30px;
+    background-color: var(--snow);
+    padding: 50px 25px 50px 15px;
 }
 
 .logins {
